RESOLVED FIXED109901
[chromium] WebInputEventBuilders should not reverse page scale
https://bugs.webkit.org/show_bug.cgi?id=109901
Summary [chromium] WebInputEventBuilders should not reverse page scale
Alexandre Elias
Reported 2013-02-14 23:41:58 PST
[chromium] WebInputEventBuilders should not reverse page scale
Attachments
Patch (9.89 KB, patch)
2013-02-14 23:44 PST, Alexandre Elias
no flags
Alexandre Elias
Comment 1 2013-02-14 23:44:56 PST
Alexandre Elias
Comment 2 2013-02-14 23:48:47 PST
The lack of idempotence is unfortunate, but this is what turns out to actually work.
James Robinson
Comment 3 2013-02-15 10:50:12 PST
Comment on attachment 188493 [details] Patch Hmmmm....odd, but them's the breaks I guess. Longer-term, do you think we should move the page scale adjustements for plugins somewhere else in the stack?
Alexandre Elias
Comment 4 2013-02-15 12:02:35 PST
It's not clear to me what would be cleaner long-term... plugins are reusing WebInputEvents just because it lets them get the information back across to the Chromium side. But even in the absence of page scale, the fields in them don't have the same meaning -- the scroll origin is the origin of the plugin, not the window scroll position.
WebKit Review Bot
Comment 5 2013-02-15 12:37:15 PST
Comment on attachment 188493 [details] Patch Clearing flags on attachment: 188493 Committed r143032: <http://trac.webkit.org/changeset/143032>
WebKit Review Bot
Comment 6 2013-02-15 12:37:18 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.