[chromium] WebInputEventBuilders should not reverse page scale https://bugs.webkit.org/show_bug.cgi?id=109901

Reviewed by James Robinson.

Though in theory logical that if WebInputEvent -> PlatformEvent
conversions divide by page scale, then the reverse builders should
multiply, in reality the only user of the reverse builders is
plugins which expect the same coordinate space as WebCore.

* src/WebInputEventConversion.cpp:
(WebKit::updateWebMouseEventFromWebCoreMouseEvent):
(WebKit::WebMouseEventBuilder::WebMouseEventBuilder):
(WebKit::addTouchPoints):
(WebKit::WebGestureEventBuilder::WebGestureEventBuilder):
* tests/WebInputEventConversionTest.cpp:
(WebCore::TEST):


Canonical link: https://commits.webkit.org/128247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143032 268f45cc-cd09-0410-ab3c-d52691b4dbfc